package com.uosipa.chatuvolchat.protocol.lobby;

import "Interop.proto";
import "Stuff.proto";

message ChooseRoom {
    message Request {
        required int32 room_id = 1;
        required string name = 2;
    }

    message Response {
        required com.uosipa.chatuvolchat.protocol.stuff.Status status = 1;
    }

    message Notification {
        required int32 room_id = 1;
        required string name = 2;
    }

    optional Request request = 1;
    optional Response response = 2;
    optional Notification notification = 3;
}

extend MessageContainer {
    optional ChooseRoom choose_room = 10;
}
